[gd_scene load_steps=5 format=3 uid="uid://d3p7jn8ewop1i"]

[ext_resource type="Script" uid="uid://c5r2akednuxnc" path="res://EnemyShooter.gd" id="1_783ee"]
[ext_resource type="PackedScene" uid="uid://cdu0scql28svy" path="res://assets/character_spiderwatch_wrangler_-_take_two.glb" id="2_qf3ro"]
[ext_resource type="AudioStream" uid="uid://cpqkqoj1bcgid" path="res://assets/SFX/Laser Gun Sound Effect - Seaguli (youtube).mp3" id="3_qf3ro"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_783ee"]
radius = 0.73876953
height = 2.1601563

[node name="EnemyShooter" type="CharacterBody3D"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)
script = ExtResource("1_783ee")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.84472656, 0)
shape = SubResource("CapsuleShape3D_783ee")

[node name="WaitTimer" type="Timer" parent="."]

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[node name="Muzzle" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0.30995592, -2.016954)

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_qf3ro")]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6" index="0"]
bones/2/rotation = Quaternion(0.8438421, -0.21057746, -0.08822187, 0.48559722)
bones/3/rotation = Quaternion(-0.17454572, 0.0037685577, 0.040628158, 0.98380333)
bones/4/rotation = Quaternion(-0.09752376, 0.37808335, -0.17845324, 0.9031592)
bones/6/rotation = Quaternion(-0.26639435, -0.6232953, 0.62329537, 0.38992304)
bones/8/rotation = Quaternion(0.94177353, -0.056001678, 0.056001667, -0.32678786)
bones/8/scale = Vector3(1, 25.739178, 0.99999994)
bones/10/rotation = Quaternion(-0.30693138, 0.950857, -0.02613467, 0.03132334)
bones/12/rotation = Quaternion(-0.082458004, 0.93109596, -0.016894637, 0.35493037)
bones/15/rotation = Quaternion(-1.3544119e-23, -0.122981556, -1.6784175e-24, 0.992409)
bones/16/rotation = Quaternion(0.17243618, 0.04313306, -0.23879875, 0.9546625)
bones/18/rotation = Quaternion(0.15484226, 0.2429852, 0.40386596, 0.8682594)
bones/20/rotation = Quaternion(0.08721228, 0.02181521, -0.12077615, 0.9886007)
bones/22/rotation = Quaternion(-0.6090426, -0.06623019, -0.10332651, 0.7835843)
bones/27/rotation = Quaternion(0.5582127, 0.48274276, 0.06527846, 0.67163736)
bones/28/rotation = Quaternion(0.43053916, -2.2373004e-07, 9.691534e-08, 0.9025719)
bones/29/rotation = Quaternion(-0.1868839, -0.0063887155, -0.0037024266, 0.9823543)
bones/29/scale = Vector3(1.0240179, 1.0240176, 1.0240182)
bones/30/rotation = Quaternion(-0.29712322, -0.06798356, 0.005150922, 0.952402)
bones/30/scale = Vector3(0.9735928, 0.9735932, 0.9735975)
bones/34/rotation = Quaternion(-0.29712325, -0.06798356, 0.0051509202, 0.952402)
bones/40/rotation = Quaternion(-5.1626863e-08, -0.034799386, 1.6750367e-09, 0.99939436)
bones/46/rotation = Quaternion(-1.2050558e-07, -0.0032227908, 3.643192e-08, 0.9999948)
bones/51/rotation = Quaternion(-5.8889267e-08, 0.103988454, -2.8623464e-08, 0.99457854)
bones/64/rotation = Quaternion(-0.7641624, -0.12210858, 0.15174624, 0.6149132)
bones/65/rotation = Quaternion(-0.51118183, -0.00094543654, 0.0036417032, 0.85946435)
bones/66/rotation = Quaternion(-0.18604438, 1.56053e-08, -1.2957128e-07, 0.9825413)
bones/67/rotation = Quaternion(0.43053916, -2.2373004e-07, 9.691534e-08, 0.9025719)
bones/70/rotation = Quaternion(4.713525e-07, -2.371417e-07, -7.368809e-09, 1)
bones/72/rotation = Quaternion(0.33779502, -2.436938e-07, 6.1840595e-08, 0.94121975)
bones/72/scale = Vector3(0.9440342, 0.9440341, 0.9440342)
bones/73/rotation = Quaternion(-0.52134293, -8.5353844e-05, 5.20972e-05, 0.85334724)
bones/74/rotation = Quaternion(0.970504, -0.0042687976, 0.0063504567, -0.2409637)
bones/77/rotation = Quaternion(0.5344357, 0.6055249, 0.17390049, 0.5634508)
bones/80/rotation = Quaternion(0.5344357, 0.6055249, 0.17390049, 0.5634507)
bones/81/rotation = Quaternion(-1.6230094e-07, -0.09385716, -1.2114103e-07, 0.9955857)
bones/82/rotation = Quaternion(0.42819846, -0.09393004, 0.044830065, 0.89767116)
bones/82/scale = Vector3(0.99959224, 1.0028267, 0.9975929)
bones/83/rotation = Quaternion(-6.7055566e-08, -0.0031820508, 2.654283e-08, 0.99999493)
bones/84/rotation = Quaternion(-0.1868958, -0.003263602, -0.0031094872, 0.9823695)
bones/85/rotation = Quaternion(-8.619975e-09, -0.034845423, 2.3763171e-08, 0.9993928)
bones/89/rotation = Quaternion(0.74874717, -0.6136711, 0.21679425, -0.1256416)
bones/90/rotation = Quaternion(0.5003482, 2.0859142e-07, -1.3117601e-07, 0.8658243)
bones/91/rotation = Quaternion(-0.68506825, -0.073327795, -0.42682612, 0.58576787)
bones/91/scale = Vector3(0.9925707, 0.9925699, 0.99257064)
bones/92/rotation = Quaternion(-0.555575, -0.22969276, -0.008331997, 0.7990671)
bones/96/rotation = Quaternion(-0.55557495, -0.22969277, -0.008331996, 0.79906714)
bones/97/rotation = Quaternion(-7.45058e-09, -1.5957082e-09, 7.3933393e-09, 1)
bones/102/rotation = Quaternion(-5.7864764e-08, -0.1266453, -2.426594e-08, 0.99194807)
bones/108/rotation = Quaternion(4.855327e-08, -0.046191905, 5.0420702e-08, 0.9989326)
bones/108/scale = Vector3(0.998502, 0.9985018, 0.99850166)
bones/113/rotation = Quaternion(-8.392774e-08, -0.020042127, -1.8650596e-08, 0.99979913)
bones/126/rotation = Quaternion(-0.7647696, 0.11962189, -0.14865594, 0.61540186)
bones/127/rotation = Quaternion(0.3312456, -0.08061832, 0.31056064, 0.88731575)
bones/128/rotation = Quaternion(-0.21732973, -3.812331e-09, 9.244914e-08, 0.97609824)
bones/129/rotation = Quaternion(0.5003482, 2.0859142e-07, -1.3117601e-07, 0.8658243)
bones/131/rotation = Quaternion(0.035893984, -0.016534982, 0.1295561, 0.9907843)
bones/131/scale = Vector3(0.9905371, 0.99053746, 0.9905376)
bones/134/rotation = Quaternion(0.7296321, 1.401588e-07, -1.2176683e-07, 0.6838399)
bones/135/rotation = Quaternion(-0.8379492, 5.437188e-05, -8.3972074e-05, 0.54574823)
bones/135/scale = Vector3(0.99724823, 0.99724835, 0.99724877)
bones/136/rotation = Quaternion(0.958334, -0.2773743, -0.06341037, 0.025270555)
bones/139/rotation = Quaternion(0.7563295, -0.60854435, 0.1886478, -0.14849815)
bones/142/rotation = Quaternion(0.7563294, -0.6085443, 0.1886478, -0.1484981)
bones/143/rotation = Quaternion(3.72585e-09, 0.01735306, 3.7258485e-09, 0.99984944)
bones/144/rotation = Quaternion(0.5002473, 0.017360354, -0.010032272, 0.8656505)
bones/145/rotation = Quaternion(1.2493082e-07, -0.04623258, -2.237567e-08, 0.99893075)
bones/146/rotation = Quaternion(-0.70393044, -0.045902148, -0.3944229, 0.588902)
bones/146/scale = Vector3(1.003376, 0.9946001, 1.0020478)
bones/147/rotation = Quaternion(-1.1266519e-08, -0.12659965, 1.8777533e-09, 0.9919539)
bones/148/rotation = Quaternion(-0.5522836, -0.12606345, 0.06270735, 0.8216804)
bones/148/scale = Vector3(0.9975514, 0.9983376, 1.0041534)
bones/155/rotation = Quaternion(0.15484224, 0.24298522, 0.40386596, 0.8682594)
bones/159/rotation = Quaternion(0.047277503, -0.27236092, 0.10585239, 0.9551858)
bones/165/rotation = Quaternion(-0.13930225, 1.4704444e-06, 0.009800951, 0.9902014)
bones/166/rotation = Quaternion(-0.050086215, -0.019635811, 0.15321134, 0.9867281)
bones/167/rotation = Quaternion(-0.08666817, 4.750376e-07, 2.4792988e-07, 0.9962372)
bones/169/rotation = Quaternion(-0.36087632, 7.839856e-12, 8.6043224e-07, 0.9326137)
bones/171/rotation = Quaternion(-0.39792415, -1.5874878e-11, 9.4869483e-07, 0.9174184)
bones/207/rotation = Quaternion(0.34146452, 0.25889218, -0.71306026, 0.55490714)
bones/207/scale = Vector3(1.0005904, 1.0005904, 1.0005906)
bones/208/rotation = Quaternion(0.2662084, 0.0020368216, 0.0056947563, 0.96389663)
bones/209/rotation = Quaternion(-0.008919841, -0.10716568, -0.037288684, 0.99350166)
bones/209/scale = Vector3(0.99954385, 0.9995439, 0.9995437)
bones/210/rotation = Quaternion(0.18045221, 0.87686133, -0.20401768, 0.3961414)
bones/211/rotation = Quaternion(0.034886803, -0.062367972, -0.065094694, 0.99531704)
bones/213/rotation = Quaternion(-0.009009937, 0.91965586, -0.1178846, 0.37450668)
bones/214/rotation = Quaternion(0.08801328, -1.816257e-06, -4.646706e-07, 0.9961193)
bones/216/rotation = Quaternion(0.14103408, 0.81269014, 0.5633976, 0.047194924)
bones/217/rotation = Quaternion(0.37114996, -0.17719486, 0.09000211, 0.9070553)
bones/219/rotation = Quaternion(-0.009010772, 0.9196552, -0.11788474, 0.37450808)
bones/220/rotation = Quaternion(0.088013455, -1.0881952e-07, 1.8699045e-09, 0.9961193)
bones/227/rotation = Quaternion(-0.009009937, 0.91965586, -0.1178846, 0.37450668)
bones/228/rotation = Quaternion(0.08801328, -1.816257e-06, -4.646706e-07, 0.9961193)
bones/230/rotation = Quaternion(0.18045259, 0.8768608, -0.20401752, 0.3961423)
bones/231/rotation = Quaternion(0.03488668, -0.062367093, -0.0650956, 0.995317)
bones/238/rotation = Quaternion(0.18045221, 0.87686133, -0.20401768, 0.3961414)
bones/239/rotation = Quaternion(0.034886803, -0.062367972, -0.065094694, 0.99531704)
bones/241/rotation = Quaternion(0.14103253, 0.8126904, 0.5633978, 0.047192913)
bones/242/rotation = Quaternion(0.3711496, -0.17719805, 0.09000276, 0.9070548)
bones/249/rotation = Quaternion(0.14103408, 0.81269014, 0.5633976, 0.047194924)
bones/250/rotation = Quaternion(0.37114996, -0.17719486, 0.09000211, 0.9070553)
bones/258/rotation = Quaternion(-2.5193508e-08, -0.053680096, -1.44629375e-08, 0.9985582)
bones/258/scale = Vector3(0.9995439, 0.9995441, 0.9995439)
bones/263/rotation = Quaternion(2.7644605e-08, -0.10552737, 1.5813646e-07, 0.9944165)
bones/276/rotation = Quaternion(-0.086620994, -0.58519953, 0.80624956, 0.00024114132)
bones/277/rotation = Quaternion(-0.13197383, 0.36900395, 0.08451859, 0.9161199)
bones/277/scale = Vector3(1.0011848, 1.0011848, 1.0011847)
bones/278/rotation = Quaternion(0.23877043, 1.2835712e-06, 1.8802692e-07, 0.9710761)
bones/280/rotation = Quaternion(0.18558466, 0.13773541, -0.76851237, 0.59663737)
bones/283/rotation = Quaternion(0.18558453, 0.1377352, -0.7685124, 0.5966374)
bones/283/scale = Vector3(0.99970496, 1.0005906, 0.9997052)
bones/284/rotation = Quaternion(-1.4982001e-08, 0.103741996, 1.8001812e-07, 0.9946043)
bones/285/rotation = Quaternion(0.26532125, 0.10375454, -0.02244904, 0.9582983)
bones/285/scale = Vector3(1.000067, 1.0000991, 0.99983394)
bones/286/rotation = Quaternion(4.1971976e-08, -0.05453369, -1.4783465e-07, 0.99851197)
bones/287/rotation = Quaternion(-0.010939088, -0.052826725, -0.03674713, 0.9978674)
bones/290/rotation = Quaternion(0.39092478, -0.37617522, 0.70839405, 0.45149517)
bones/290/scale = Vector3(1.0008988, 1.0008991, 1.0008992)
bones/291/rotation = Quaternion(0.25158522, -0.002627976, -0.0041839494, 0.96782255)
bones/292/rotation = Quaternion(0.056172267, 0.39060223, -0.086891614, 0.91472644)
bones/292/scale = Vector3(0.9993064, 0.99930626, 0.99930614)
bones/293/rotation = Quaternion(-0.118771635, 0.92914015, -0.008041101, -0.35003895)
bones/294/rotation = Quaternion(0.43620142, -0.07955408, 0.031942923, 0.8957562)
bones/296/rotation = Quaternion(-0.10074543, 0.9682019, -0.013163701, -0.22860926)
bones/297/rotation = Quaternion(0.08735052, 1.7463857e-06, -7.586689e-07, 0.9961777)
bones/300/rotation = Quaternion(0.407773, 0.2351057, 0.139654, 0.87117356)
bones/302/rotation = Quaternion(-0.10074597, 0.96820146, -0.013164038, -0.22861122)
bones/303/rotation = Quaternion(0.0873503, -6.544275e-09, -5.5158882e-08, 0.9961777)
bones/310/rotation = Quaternion(-0.10074543, 0.9682019, -0.013163701, -0.22860926)
bones/311/rotation = Quaternion(0.08735052, 1.7463857e-06, -7.586689e-07, 0.9961777)
bones/313/rotation = Quaternion(-0.1187715, 0.92913985, -0.008041055, -0.35003984)
bones/314/rotation = Quaternion(0.43620184, -0.079555, 0.03194322, 0.8957559)
bones/321/rotation = Quaternion(-0.118771635, 0.92914015, -0.008041101, -0.35003895)
bones/322/rotation = Quaternion(0.43620142, -0.07955408, 0.031942923, 0.8957562)
bones/325/rotation = Quaternion(0.40777358, 0.23510891, 0.13965301, 0.8711725)
bones/333/rotation = Quaternion(0.407773, 0.2351057, 0.139654, 0.87117356)
bones/341/rotation = Quaternion(2.948608e-08, 0.19988237, 1.474304e-07, 0.9798199)
bones/341/scale = Vector3(0.99930614, 0.9993061, 0.999306)
bones/346/rotation = Quaternion(-1.9871926e-08, 0.17212157, -2.6495902e-08, 0.9850757)
bones/359/rotation = Quaternion(0.027874006, -0.6718922, 0.73903483, -0.040144112)
bones/360/rotation = Quaternion(-0.13197452, -0.36900392, -0.08451893, 0.91611975)
bones/360/scale = Vector3(1.0011843, 1.0011847, 1.0011847)
bones/361/rotation = Quaternion(0.23877178, -1.2883687e-06, -1.6176553e-07, 0.9710757)
bones/363/rotation = Quaternion(0.12993295, -0.2024344, 0.79859984, 0.55170286)
bones/366/rotation = Quaternion(0.12993278, -0.20243427, 0.79859996, 0.55170274)
bones/367/rotation = Quaternion(5.1026902e-08, -0.16917148, -1.6064018e-08, 0.98558664)
bones/368/rotation = Quaternion(0.2485435, -0.1691974, 0.039227996, 0.9529216)
bones/369/rotation = Quaternion(1.4545255e-07, 0.20072089, 9.886971e-08, 0.9796485)
bones/370/rotation = Quaternion(0.072454035, 0.19905238, -0.07386224, 0.9745116)
bones/389/position = Vector3(0, -0.64884907, 0)
bones/393/rotation = Quaternion(0.2004951, -0.074600264, -0.21577953, 0.95272017)
bones/397/position = Vector3(0, 0.66078806, 0)
bones/397/rotation = Quaternion(1.9721523e-31, -1.7316395e-32, -0.22854021, 0.97353446)
bones/401/rotation = Quaternion(0.20049512, -0.074600264, -0.21577954, 0.9527203)
bones/405/rotation = Quaternion(0.024272595, -0.60664153, 0.79282, -0.05322951)
bones/408/rotation = Quaternion(0.10741269, 0.018005196, 0.16248181, 0.98068243)
bones/412/rotation = Quaternion(-0.05133211, -0.6623108, 0.7455889, 0.052977934)
bones/415/rotation = Quaternion(0.10741269, 0.018005172, 0.16248181, 0.98068243)

[node name="ORG-Jaw_001_0130" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="0"]
transform = Transform3D(0.99999696, -0.0012267819, -0.0017092617, -0.0013069975, -0.9988622, -0.04775417, -0.0016487088, 0.047758967, -0.99885714, 0.07537092, -0.6777811, 1.3772488)

[node name="ORG-Jaw_0109" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="1"]
transform = Transform3D(0.99999696, -0.0018675183, -0.0009671637, -0.001305905, -0.9118678, 0.41049117, -0.0016485014, -0.41048467, -0.9118656, 0.075498044, -0.6157137, 1.4051888)

[node name="ORG-mouth upperbone_0132" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="2"]
transform = Transform3D(0.99999696, -0.0014387784, -0.0015352914, -0.0013066467, -0.9965663, 0.08283651, -0.0016491786, -0.082831085, -0.996562, 0.07551489, -0.65376824, 1.4456303)

[node name="ORG-eye_R_0133" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="3"]
transform = Transform3D(-0.0016963193, -0.31402576, -0.9494122, -0.039522022, -0.948655, 0.31384587, -0.9992168, 0.038057655, -0.010802634, 0.05709277, -0.6749803, 1.4719433)

[node name="ORG-eye_L_0134" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="4"]
transform = Transform3D(0.0016969151, 0.31166875, 0.9501884, 0.039521992, -0.9494726, 0.31136337, 0.9992167, 0.037027687, -0.013929918, 0.09396805, -0.67502844, 1.4718826)

[node name="ORG-Head_0127" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="5"]
transform = Transform3D(0.99999696, 0.0018706187, -0.0009611358, -0.0013092218, 0.19605625, -0.98059106, -0.0016458598, 0.98059, 0.19605812, 0.07573486, -0.5489396, 1.4960184)

[node name="Spike01_L_0135" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="6"]
transform = Transform3D(0.9465503, 0.08153976, 0.31207776, 0.32255402, -0.2380536, -0.91612697, -0.00040950585, 0.96782255, -0.25163084, 0.06549614, -0.038939565, 1.5967679)

[node name="Spike01_L_001_0136" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="7"]
transform = Transform3D(0.9374608, 0.089801416, 0.3363065, 0.33203515, 0.059336483, -0.94139856, -0.10449417, 0.99419, 0.025808424, 0.045133926, 0.0504176, 1.6275141)

[node name="Spike01_R_0137" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="8"]
transform = Transform3D(0.9465504, 0.08153976, 0.3120773, 0.3225536, -0.23805359, -0.91612715, -0.00040962538, 0.9678225, -0.25163084, -0.059917174, -0.081676364, 1.5968221)

[node name="Spike01_R_001_0138" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="9"]
transform = Transform3D(0.9452223, -0.10657663, 0.30853683, 0.30952245, -0.007583335, -0.95086145, 0.10367942, 0.9942749, 0.025819883, -0.09833207, 0.0015290119, 1.6275761)

[node name="Spike01_L_002_0142" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="10"]
transform = Transform3D(0.9356815, 0.01194194, 0.35264176, 0.32466322, 0.3622434, -0.87371194, -0.13817601, 0.9320064, 0.33506745, 0.05285447, 0.18647851, 1.6174107)

[node name="Spike01_L_004_0143" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="11"]
transform = Transform3D(0.9193447, -0.19093168, 0.34401917, 0.36672005, 0.7326103, -0.5734086, -0.14255017, 0.65331924, 0.7435403, 0.012172148, 0.350896, 1.5539482)

[node name="Spike01_R_002_0144" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="12"]
transform = Transform3D(0.93933815, -0.22992995, 0.25450924, 0.3142829, 0.27982116, -0.9071526, 0.13736457, 0.93211114, 0.33510983, -0.18753651, 0.104561046, 1.6175148)

[node name="Spike01_L_005_0145" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="13"]
transform = Transform3D(0.9570924, -0.22725081, 0.1798006, 0.2128176, 0.9723528, 0.09611365, -0.19667223, -0.053725153, 0.97899187, -0.00590425, 0.36508816, 1.4548477)

[node name="Spike01_R_004_0146" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="14"]
transform = Transform3D(0.9520851, -0.2956434, 0.07828082, 0.27100292, 0.6969281, -0.6639637, 0.1417405, 0.6533646, 0.7436552, -0.25576648, 0.25959113, 1.554064)

[node name="Spike01_R_005_0147" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="15"]
transform = Transform3D(0.8880432, -0.41382304, -0.2003193, 0.41594517, 0.908775, -0.033418566, 0.1958749, -0.05364482, 0.97915834, -0.25019446, 0.281842, 1.4549534)

[node name="DEF-Finger01_L_0165" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="16"]
transform = Transform3D(0.7127882, 0.044275597, -0.69997996, 0.6979374, 0.053973153, 0.7141218, 0.06939856, -0.99755967, 0.0075709373, 0.6036538, 0.085091665, 0.6418217)

[node name="DEF-FingerPinky01_L_0172" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="17"]
transform = Transform3D(0.6228764, -0.2217054, -0.75024694, 0.779336, 0.09216905, 0.61978984, -0.068261355, -0.97074807, 0.23019312, 0.6144739, 0.14607123, 0.63473696)

[node name="DEF-Thumb02_L_0179" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="18"]
transform = Transform3D(0.9057014, -0.39700496, -0.14863163, -0.13688578, -0.6057255, 0.7838088, -0.40120634, -0.6895523, -0.6029526, 0.5431393, 0.03564373, 0.7853928)

[node name="DEF-Finger01_R_0222" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="19"]
transform = Transform3D(0.9501982, 0.2359581, 0.20358515, -0.17184989, -0.14825077, 0.973904, 0.25998223, -0.96038765, -0.10031776, -0.4812182, -0.17380337, 0.60461855)

[node name="DEF-FingerPinky01_R_0229" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="20"]
transform = Transform3D(0.91454244, 0.40439588, 0.008730054, -0.22678015, 0.49475294, 0.8389214, 0.33493698, -0.7692099, 0.5441824, -0.52106035, -0.123901404, 0.59016806)

[node name="DEF-Thumb02_R_0236" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="21"]
transform = Transform3D(0.9689762, 0.24378914, 0.040636495, -0.028498337, -0.053106546, 0.9981818, 0.245505, -0.96837294, -0.044512838, -0.43352452, -0.18316038, 0.72622347)

[node name="Spike01_L_003_0266" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="22"]
transform = Transform3D(0.97064644, -0.23162255, 0.06476979, 0.19143474, 0.9070758, 0.37492102, -0.14559129, -0.35151675, 0.924791, -0.03298059, 0.37667763, 1.3093039)

[node name="Spike01_R_003_0267" parent="Sketchfab_Scene/Sketchfab_model/3766686771724d88a000e26951e2002a_fbx/Object_2/RootNode/RIG-Finger_LPFinger_LiFinger_LnFinger_LkFinger_LyFinger_L_F_001/Object_6/Skeleton3D" index="23"]
transform = Transform3D(0.88568014, -0.3707323, -0.2795123, 0.44114172, 0.8596716, 0.2576007, 0.14478794, -0.3514564, 0.92493993, -0.23594192, 0.30751497, 1.3093916)

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_qf3ro")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 1.484531, -0.6966841)
light_color = Color(0, 0.24313726, 0, 1)
light_energy = 2.0

[editable path="Sketchfab_Scene"]
